--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ li {
   font-size: 15px;
 }
 
-.message {
+.green {
   color: green;
   background: rgb(106, 187, 171);
   font-size: 20px;
@@ -17,7 +17,7 @@ li {
   padding: 10px;
   margin-bottom: 10px;
 }
-.error {
+.red {
   color: red;
   background: rgb(10, 10, 10);
   font-size: 20px;
